--- a/Projects/Multi/Examples/DataLogTerminal/SW4STM32/STM32F401RE-Nucleo/STM32F4xx-Nucleo-DataLogTerminal/.project
+++ b/Projects/Multi/Examples/DataLogTerminal/SW4STM32/STM32F401RE-Nucleo/STM32F4xx-Nucleo-DataLogTerminal/.project
@@ -81,6 +81,11 @@
 			<locationURI>virtual:/virtual</locationURI>
 		</link>
 		<link>
+			<name>Drivers/BSP/ADA_FRUIT_LCD</name>
+			<type>2</type>
+			<locationURI>virtual:/virtual</locationURI>
+		</link>
+		<link>
 			<name>Drivers/BSP/Components</name>
 			<type>2</type>
 			<locationURI>virtual:/virtual</locationURI>
@@ -166,6 +171,16 @@
 			<locationURI>$%7BPARENT-7-PROJECT_LOC%7D/Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_rtc_ex.c</locationURI>
 		</link>
 		<link>
+			<name>Drivers/STM32F4xx_HAL_Driver/stm32f4xx_hal_spdifrx.c</name>
+			<type>1</type>
+			<locationURI>PARENT-7-PROJECT_LOC/Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_spdifrx.c</locationURI>
+		</link>
+		<link>
+			<name>Drivers/STM32F4xx_HAL_Driver/stm32f4xx_hal_spi.c</name>
+			<type>1</type>
+			<locationURI>PARENT-7-PROJECT_LOC/Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_spi.c</locationURI>
+		</link>
+		<link>
 			<name>Drivers/STM32F4xx_HAL_Driver/stm32f4xx_hal_tim.c</name>
 			<type>1</type>
 			<locationURI>PARENT-7-PROJECT_LOC/Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_tim.c</locationURI>
@@ -201,6 +216,16 @@
 			<locationURI>virtual:/virtual</locationURI>
 		</link>
 		<link>
+			<name>Drivers/BSP/ADA_FRUIT_LCD/adafruit_display.c</name>
+			<type>1</type>
+			<locationURI>PARENT-7-PROJECT_LOC/Drivers/BSP/ADA_FRUIT_LCD/adafruit_display.c</locationURI>
+		</link>
+		<link>
+			<name>Drivers/BSP/Components/Common</name>
+			<type>2</type>
+			<locationURI>virtual:/virtual</locationURI>
+		</link>
+		<link>
 			<name>Drivers/BSP/Components/HTS221_Driver.c</name>
 			<type>1</type>
 			<locationURI>$%7BPARENT-7-PROJECT_LOC%7D/Drivers/BSP/Components/hts221/HTS221_Driver.c</locationURI>
@@ -209,6 +234,16 @@
 			<name>Drivers/BSP/Components/HTS221_Driver_HL.c</name>
 			<type>1</type>
 			<locationURI>$%7BPARENT-7-PROJECT_LOC%7D/Drivers/BSP/Components/hts221/HTS221_Driver_HL.c</locationURI>
+		</link>
+		<link>
+			<name>Drivers/BSP/Components/ILI9341_Driver.c</name>
+			<type>1</type>
+			<locationURI>PARENT-7-PROJECT_LOC/Drivers/BSP/Components/ili9341/ILI9341_Driver.c</locationURI>
+		</link>
+		<link>
+			<name>Drivers/BSP/Components/ILI9341_Driver_HL.c</name>
+			<type>1</type>
+			<locationURI>PARENT-7-PROJECT_LOC/Drivers/BSP/Components/ili9341/ILI9341_Driver_HL.c</locationURI>
 		</link>
 		<link>
 			<name>Drivers/BSP/Components/LIS3MDL_MAG_driver.c</name>
@@ -253,12 +288,12 @@
 		<link>
 			<name>Drivers/BSP/Components/LSM6DS3_ACC_GYRO_driver.c</name>
 			<type>1</type>
-			<locationURI>$%7BPARENT-7-PROJECT_LOC%7D/Drivers/BSP/Components/lsm6ds3/LSM6DS3_ACC_GYRO_driver.c</locationURI>
+			<locationURI>PARENT-7-PROJECT_LOC/Drivers/BSP/Components/lsm6ds3/LSM6DS3_ACC_GYRO_driver.c</locationURI>
 		</link>
 		<link>
 			<name>Drivers/BSP/Components/LSM6DS3_ACC_GYRO_driver_HL.c</name>
 			<type>1</type>
-			<locationURI>$%7BPARENT-7-PROJECT_LOC%7D/Drivers/BSP/Components/lsm6ds3/LSM6DS3_ACC_GYRO_driver_HL.c</locationURI>
+			<locationURI>PARENT-7-PROJECT_LOC/Drivers/BSP/Components/lsm6ds3/LSM6DS3_ACC_GYRO_driver_HL.c</locationURI>
 		</link>
 		<link>
 			<name>Drivers/BSP/STM32F4xx-Nucleo/stm32f4xx_nucleo.c</name>
@@ -464,6 +499,56 @@
 			<name>Middlewares/Third_Party/FreeRTOS/Source</name>
 			<type>2</type>
 			<locationURI>virtual:/virtual</locationURI>
+		</link>
+		<link>
+			<name>Drivers/BSP/Components/Common/Display.h</name>
+			<type>1</type>
+			<locationURI>PARENT-7-PROJECT_LOC/Drivers/BSP/Components/Common/Display.h</locationURI>
+		</link>
+		<link>
+			<name>Drivers/BSP/Components/Common/Release_Notes.html</name>
+			<type>1</type>
+			<locationURI>PARENT-7-PROJECT_LOC/Drivers/BSP/Components/Common/Release_Notes.html</locationURI>
+		</link>
+		<link>
+			<name>Drivers/BSP/Components/Common/accelerometer.h</name>
+			<type>1</type>
+			<locationURI>PARENT-7-PROJECT_LOC/Drivers/BSP/Components/Common/accelerometer.h</locationURI>
+		</link>
+		<link>
+			<name>Drivers/BSP/Components/Common/component.h</name>
+			<type>1</type>
+			<locationURI>PARENT-7-PROJECT_LOC/Drivers/BSP/Components/Common/component.h</locationURI>
+		</link>
+		<link>
+			<name>Drivers/BSP/Components/Common/gyroscope.h</name>
+			<type>1</type>
+			<locationURI>PARENT-7-PROJECT_LOC/Drivers/BSP/Components/Common/gyroscope.h</locationURI>
+		</link>
+		<link>
+			<name>Drivers/BSP/Components/Common/humidity.h</name>
+			<type>1</type>
+			<locationURI>PARENT-7-PROJECT_LOC/Drivers/BSP/Components/Common/humidity.h</locationURI>
+		</link>
+		<link>
+			<name>Drivers/BSP/Components/Common/magnetometer.h</name>
+			<type>1</type>
+			<locationURI>PARENT-7-PROJECT_LOC/Drivers/BSP/Components/Common/magnetometer.h</locationURI>
+		</link>
+		<link>
+			<name>Drivers/BSP/Components/Common/pressure.h</name>
+			<type>1</type>
+			<locationURI>PARENT-7-PROJECT_LOC/Drivers/BSP/Components/Common/pressure.h</locationURI>
+		</link>
+		<link>
+			<name>Drivers/BSP/Components/Common/sensor.h</name>
+			<type>1</type>
+			<locationURI>PARENT-7-PROJECT_LOC/Drivers/BSP/Components/Common/sensor.h</locationURI>
+		</link>
+		<link>
+			<name>Drivers/BSP/Components/Common/temperature.h</name>
+			<type>1</type>
+			<locationURI>PARENT-7-PROJECT_LOC/Drivers/BSP/Components/Common/temperature.h</locationURI>
 		</link>
 		<link>
 			<name>Middlewares/Third_Party/FreeRTOS/Source/CMSIS_RTOS</name>
